--- a/零基础学院/SinglePage/css/style.css
+++ b/零基础学院/SinglePage/css/style.css
@@ -166,6 +166,290 @@ main#main_content .chat_right {
     overflow: scroll;
 }
 
+main#main_content .chat_right .top_bar {
+    width: 100%;
+    height: 5rem;
+    flex-direction: row;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 1rem 0 1rem 0;
+    border-bottom: 1px solid rgb(239, 243, 246);
+    background: rgb(255, 255, 255);
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.05);
+    z-index: 12;
+    overflow: hidden;
+    position: fixed;
+}
+
+main#main_content .chat_right .top_bar h3 {
+    font-size: 1.8rem;
+    font-family: "Myriad Pro";
+    color: rgb(88, 93, 104);
+    margin-left: 1rem;
+    font-weight: normal;
+}
+
+main#main_content .chat_right .bar {
+    display: flex;
+    margin-left: 1rem;
+    padding: 0;
+    height: 1.9rem;
+}
+
+main#main_content .chat_right .bar li {
+    display: inline-block;
+    width: 1.8rem;
+    height: 1.8rem;
+    padding: .1rem;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid rgb(206, 208, 218);
+}
+
+main#main_content .chat_right .bar li a img {
+    width: 1.6rem;
+    height: 1.6rem;
+}
+
+main#main_content .chat_right .chat_bar li a img {
+    width: 1rem;
+    height: 1rem;
+}
+
+main#main_content .chat_right .chat_bar {
+    margin: 1rem 2rem 1rem 2rem;
+}
+
+main#main_content .chat_right .chat_bar li {
+    border: 1px solid rgb(206, 208, 218);
+}
+
+main#main_content .chat_right .chat_bar .item_1 {
+    width: 4rem;
+    font-size: 1.4rem;
+    font-family: "Myriad Pro";
+    color: rgb(86, 104, 138);
+    padding: .2rem 2rem 0 0;
+    border: 0;
+    height: 2.2rem;
+}
+
+main#main_content .chat_right .chat_bar .item_2 {
+    border-right: 0;
+    border-radius: 4px 0 0 4px;
+}
+
+main#main_content .chat_right .chat_bar .item_3 {
+    border-right: 1px solid rgb(206, 208, 218) !important;
+    border-radius: 0 4px 4px 0;
+}
+
+main#main_content .chat_right .chat_bar li:last-child {
+    border-right: 0;
+}
+
+main#main_content .chat_right .tool_bar .item_1 {
+    border-radius: 4px 0 0 4px;
+}
+
+main#main_content .chat_right .tool_bar .item_2 {
+    border-left: 0;
+}
+
+main#main_content .chat_right .tool_bar .item_3 {
+    border-left: 0;
+    border-radius: 0 4px 4px 0;
+}
+
+main#main_content .chat_right .tool_bar .item_4 {
+    border-top: 0;
+    border-bottom: 0;
+    border-right: 1px solid rgba(206, 208, 218, .5);
+    border-left: 0;
+    padding-right: .5rem;
+}
+
+main#main_content .chat_right .bar_container {
+    position: fixed;
+    right: 0;
+    display: flex;
+}
+
+main#main_content .chat_right .artical {
+    margin-top: 7.1rem;
+    background: rgb(255, 255, 255);
+}
+
+main#main_content .chat_right .artical .area_2 .jackson .photo {
+    margin-left: 4rem;
+    display: flex;
+}
+
+main#main_content .chat_right .artical .area_2 .jackson .photo .wrap {
+    width: 15.5rem;
+    height: 10rem;
+    margin: 1rem 1rem 1rem 1rem;
+}
+
+main#main_content .chat_right .artical .area_2 .jackson .photo .pic2 {
+    position: relative;
+}
+
+main#main_content .chat_right .artical .area_2 .jackson .photo img {
+    width: 15.5rem;
+    height: 10rem;
+    z-index: 99;
+    border-radius: 6px;
+}
+
+main#main_content .chat_right .artical .area_2 .jackson .pic2 .cover {
+    z-index: 100;
+    width: 1.6rem;
+    height: 1.6rem;
+    position: absolute;
+    left: 33%;
+    top: 31%;
+}
+
+main#main_content .chat_right .artical .area_2 .jackson .pic2 .cover_wrap {
+    width: 4rem;
+    height: 4rem;
+    background: rgba(255, 255, 255, .3);
+    overflow: hidden;
+    position: absolute;
+    top: 30%;
+    left: 38%;
+    border-radius: 50%;
+}
+
+main#main_content .chat_right .berry {
+    padding: 1rem 0 1rem 1.5rem;
+}
+
+main#main_content .chat_right .berry img {
+    float: left;
+    width: 4rem;
+    height: 4rem;
+}
+
+main#main_content .chat_right .name {
+    font-size: 1.6rem;
+    font-family: "Myriad Pro";
+    color: rgb(88, 93, 104);
+    font-weight: normal;
+    line-height: 1.2;
+}
+
+main#main_content .chat_right .name .time {
+    padding-left: 2rem;
+}
+
+main#main_content .chat_right .message {
+    font-size: 1.4rem;
+    font-family: "Myriad Pro";
+    color: rgb(88, 93, 104);
+    line-height: 1.357;
+}
+
+main#main_content .chat_right .name span {
+    font-size: 1.4rem;
+    color: rgb(127, 143, 164);
+    line-height: 2.571;
+    text-align: right;
+}
+
+main#main_content .chat_right .block {
+    margin-left: 5rem;
+    margin-right: 1.5rem;
+}
+
+main#main_content .chat_right .jackson {
+    padding: 1rem 0 4rem 1.5rem;
+}
+
+main#main_content .chat_right .jackson img {
+    float: left;
+    width: 4rem;
+    height: 4rem;
+}
+
+main#main_content .chat_right .area {
+    position: relative;
+}
+
+main#main_content .chat_right .area .date_wrap {
+    font-size: 1.4rem;
+    font-family: "Myriad Pro";
+    color: rgb(127, 143, 164);
+    line-height: 1.357;
+    border-bottom: 2px solid rgb(239, 243, 246);
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    position: relative;
+    margin-bottom: 2rem;
+}
+
+main#main_content .chat_right .area .date {
+    position: absolute;
+    top: -.6rem;
+    background: rgb(255, 255, 255);
+    padding: 0 2rem 0 2rem;
+}
+
+main#main_content .chat_right .add_box {
+    position: fixed;
+    width: 100%;
+    height: 7rem;
+    bottom: 0;
+    z-index: 999;
+}
+
+main#main_content .chat_right .add_box .group {
+    height: 5rem;
+    width: 85rem;
+    display: flex;
+    position: fixed;
+    right: 4%;
+    bottom: 1rem;
+}
+
+main#main_content .chat_right .add_box button {
+    height: 5.1rem;
+    width: 5rem;
+    border: 0;
+    border-right: 1px solid rgb(206, 208, 218) !important;
+    border-radius: 6px 0 0 6px;
+    background-image: linear-gradient( 90deg, rgb(240, 240, 240) 0%, rgb(255, 255, 255) 100%);
+    border: 1px solid rgb(206, 208, 218);
+}
+
+main#main_content .chat_right .add_box button img {
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
+main#main_content .chat_right .add_box input {
+    height: 4.9rem;
+    width: 70rem;
+    border: 0;
+    padding: 0 0 0 3rem;
+    border-radius: 0 6px 6px 0;
+    border: 1px solid rgb(206, 208, 218);
+    border-left: 0 !important;
+}
+
+main#main_content .chat_right .add_box input:focus {
+    outline: none;
+}
+
+main#main_content .chat_right .add_box button:focus {
+    outline: none;
+}
+
 main#main_content .chat_left {
     width: 30rem;
     height: 100%;
@@ -238,13 +522,12 @@ main#main_content .chat_left .contact .item {
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.05);
     padding: 2.5rem 0 0 0;
 }
+
 main#main_content .chat_left .contact .item_1 .personal_info .name {
     color: rgb(35, 153, 241);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
     height: 1.6rem;
 }
+
 main#main_content .chat_left .contact .item:hover {
     border-left: 2px solid rgb(35, 153, 241);
 }
@@ -258,8 +541,8 @@ main#main_content .chat_left .contact .item .person {
 }
 
 main#main_content .chat_left .contact .item .photo a img {
-    width: 5rem;
-    height: 5rem;
+    width: 4rem;
+    height: 4rem;
 }
 
 main#main_content .chat_left .contact .item .personal_info {
@@ -424,12 +707,21 @@ nav#primary ul li:last-child a:last-child {
     margin-right: 1rem;
     margin-top: 1rem;
 }
+
 .point {
     display: block;
-    width: .5rem;
-    height: .5rem;
+    width: .7rem;
+    height: .7rem;
     background: rgb(35, 153, 241);
-    float: left;
     border-radius: 50%;
+    float: left;
+    margin-top: .3rem;
     margin-right: .5rem;
+}
+
+main#main_content .chat_right .area_2 .date_wrap {}
+
+.mark {
+    border-color: rgb(35, 153, 241) !important;
+    color: rgb(35, 153, 241) !important;
 }
